--- a/demo/_config.yml
+++ b/demo/_config.yml
@@ -2,10 +2,11 @@
 title: ng-recaptcha
 description: "Angular component for Google reCAPTCHA"
 baseurl: "/ng-recaptcha" # the subpath of your site, e.g. /blog
-cacheBusterVer: "2.1.1"
+cacheBusterVer: "3.0.0"
 exclude: [
   'Gemfile',
   'Gemfile.lock',
+# <DEBUG> Comment next line for debugging session
   'examples/node_modules',
   'examples/package.json',
   'examples/tsconfig.json',
@@ -14,9 +15,9 @@ exclude: [
 ]
 
 # SystemJS mapping for ng2-recaptcha component
-recaptchaMapping: "https://npmcdn.com/ng-recaptcha@2.1.1" # stick to a particular version to avoid caching confusion
-# Uncomment to debug (you must run `cd examples && npm run latest` in order for that to work)
-#recaptchaMapping: "./examples/node_modules/ng-recaptcha"
+recaptchaMapping: "https://npmcdn.com/ng-recaptcha@3.0.0" # stick to a particular version to avoid caching confusion
+# <DEBUG> Uncomment next line for debugging session
+# recaptchaMapping: "./examples/node_modules/ng-recaptcha"
 
 # Build settings
 markdown: kramdown
