--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-recaptcha",
-  "version": "2.1.1",
+  "version": "3.0.0",
   "description": "Angular component for Google reCAPTCHA",
   "scripts": {
     "demo": "npm run demo:install && npm run demo:serve",
@@ -35,7 +35,7 @@
     "@types/grecaptcha": "^2.0.33"
   },
   "peerDependencies": {
-    "@angular/core": "^4.0.0 || ^2.0.0"
+    "@angular/core": "^4.0.0 || ^5.0.0-beta.1"
   },
   "devDependencies": {
     "@angular/common": "^4.0.0",
@@ -45,7 +45,6 @@
     "@angular/forms": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
     "@types/core-js": "^0.9.39",
-    "@types/grecaptcha": "^2.0.33",
     "angular-precommit": "^1.0.3",
     "codelyzer": "^3.0.1",
     "conventional-changelog-cli": "^1.3.1",
@@ -53,7 +52,7 @@
     "gh-pages": "^0.12.0",
     "husky": "^0.13.3",
     "rxjs": "^5.2.0",
-    "tslint": "^5.1.0",
+    "tslint": "~5.7.0",
     "typescript": "^2.2.1",
     "zone.js": "^0.8.5"
   },
