--- a/package.json
+++ b/package.json
@@ -45,32 +45,33 @@
     "@types/grecaptcha": "^2.0.33"
   },
   "dependencies": {
-    "tslib": "^1.9.0"
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/core": "^6.0.0 || ^7.0.0 || ^8.0.0"
+    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0"
   },
   "devDependencies": {
-    "@angular/common": "^6.0.0",
-    "@angular/compiler": "^6.0.0",
-    "@angular/compiler-cli": "^6.0.0",
-    "@angular/core": "^6.0.0",
-    "@angular/forms": "^6.0.0",
-    "@angular/platform-browser": "^6.0.0",
+    "@angular/common": "^10.0.0",
+    "@angular/compiler": "^10.0.0",
+    "@angular/compiler-cli": "^10.0.0",
+    "@angular/core": "^10.0.0",
+    "@angular/forms": "^10.0.0",
+    "@angular/platform-browser": "^10.0.0",
     "@types/core-js": "^0.9.39",
+    "@types/node": "^12.0.0",
     "angular-precommit": "^1.0.3",
-    "codelyzer": "^4.3.0",
+    "codelyzer": "~6.0.0",
     "conventional-changelog-cli": "^1.3.1",
     "conventional-github-releaser": "^1.1.13",
     "del-cli": "^0.2.1",
     "gh-pages": "^0.12.0",
     "husky": "^0.13.3",
-    "ng-packagr": "^5.2.0",
+    "ng-packagr": "^10.1.0",
     "npm-run-all": "^4.1.2",
-    "rxjs": "^6.1.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.7.2",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.6.2",
+    "tslint": "~6.0.0",
+    "typescript": "^3.9.7",
+    "zone.js": "^0.10.3"
   },
   "homepage": "https://github.com/DethAriel/ng-recaptcha#readme"
 }
