--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "tslib": "^2.0.0"
   },
   "peerDependencies": {
-    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0"
+    "@angular/core": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@angular/common": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@angular/forms": "^7.0.0 || ^8.0.0 || ^9.0.0 || ^10.0.0",
+    "rxjs": "^6.0.0"
   },
   "devDependencies": {
     "@angular/common": "^10.0.0",
