--- a/projects/ng-recaptcha/package.json
+++ b/projects/ng-recaptcha/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ng-recaptcha",
+  "name": "@devolutions/ng-recaptcha",
   "description": "Angular component for Google reCAPTCHA",
-  "version": "9.0.0",
+  "version": "9.1.0",
   "author": "Ruslan Arkhipau <dethariel@gmail.com>",
   "license": "MIT",
   "repository": {
