feat(angular-14): LSTS-2327 Update lib for angular 14 compatibility.

--- a/angular.json
+++ b/angular.json
@@ -119,5 +119,8 @@
       }
     }
   },
-  "defaultProject": "ng-recaptcha"
+  "defaultProject": "ng-recaptcha",
+  "cli": {
+    "analytics": false
+  }
 }
