--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@devolutions/ng-recaptcha-base",
   "private": true,
-  "version": "9.1.0",
+  "version": "10.0.0",
   "scripts": {
     "demo:file-gen": "ts-node --project ./tsconfig.node.json ./projects/demo/bin/file-gen.ts",
     "demo:serve": "yarn demo:file-gen && ng serve demo",
@@ -23,29 +23,29 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@types/grecaptcha": "^3.0.3",
+    "@types/grecaptcha": "^3.0.4",
     "tslib": "^2.2.0"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.1",
-    "@angular-eslint/builder": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin": "13.0.0-alpha.0",
-    "@angular-eslint/eslint-plugin-template": "13.0.0-alpha.0",
-    "@angular-eslint/schematics": "13.0.0-alpha.0",
-    "@angular-eslint/template-parser": "13.0.0-alpha.0",
-    "@angular/animations": "^13.0.0",
-    "@angular/cdk": "^12.0.0",
-    "@angular/cli": "^13.0.1",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/material": "^12.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/router": "^13.0.0",
+    "@angular-devkit/build-angular": "^14",
+    "@angular-eslint/builder": "^14",
+    "@angular-eslint/eslint-plugin": "^14",
+    "@angular-eslint/eslint-plugin-template": "^14",
+    "@angular-eslint/schematics": "^14",
+    "@angular-eslint/template-parser": "^14",
+    "@angular/animations": "^14",
+    "@angular/cdk": "^14",
+    "@angular/cli": "^14",
+    "@angular/common": "^14",
+    "@angular/compiler": "^14",
+    "@angular/compiler-cli": "^14",
+    "@angular/core": "^14",
+    "@angular/forms": "^14",
+    "@angular/material": "^14",
+    "@angular/platform-browser": "^14",
+    "@angular/platform-browser-dynamic": "^14",
+    "@angular/router": "^14",
     "@types/core-js": "^2.5.4",
     "@types/jasmine": "^3.8.1",
     "@types/node": "^12",
@@ -68,14 +68,14 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
     "lint-staged": "^11.0.1",
-    "ng-packagr": "^13.0.2",
+    "ng-packagr": "^14.1.0",
     "prettier": "^2.3.2",
     "protractor": "^7.0.0",
     "query-string": "^7.0.1",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.3",
+    "rxjs": "^7.5.6",
     "ts-node": "^10.1.0",
-    "typescript": "^4.4.4",
+    "typescript": "^4.7.4",
     "typescript-eslint": "^0.0.1-alpha.0",
     "zone.js": "~0.11.4"
   }
